update post article with regard to tags